syntax = "proto3";

option go_package = "./subscription;pb_subscription";

service AskSubscription {
  rpc IsAuthorizedPublisher(IsAuthorizedPublisherRequest) returns (Response);
}

message Response {
  bool is_success = 1;
}

message IsAuthorizedPublisherRequest {
  int32 publication_id = 1;
  int32 user_id = 2;
}